src/objects/ffvat__VatReturn__c.object
<CustomObject>
    <fields>
        <fullName>ffvat__Box1Sum__c</fullName>
        <label>Box1Sum</label>
        <summarizedField>ffvat__VatReportedTransaction__c.ffvat__TaxReported__c</summarizedField>
        <summaryFilterItems>
            <field>ffvat__VatReportedTransaction__c.ffvat__TaxBox__c</field>
            <operation>equals</operation>
            <value>Box 1</value>
        </summaryFilterItems>
        <summaryForeignKey>ffvat__VatReportedTransaction__c.ffvat__VatReturn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffvat__Box1__c</fullName>
        <formula>Round(ffvat__Box1Sum__c * (-1), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__Box2Sum__c</fullName>
        <label>Box2Sum</label>
        <summarizedField>ffvat__VatReportedTransaction__c.ffvat__TaxReported__c</summarizedField>
        <summaryFilterItems>
            <field>ffvat__VatReportedTransaction__c.ffvat__TaxBox__c</field>
            <operation>equals</operation>
            <value>Box 2</value>
        </summaryFilterItems>
        <summaryForeignKey>ffvat__VatReportedTransaction__c.ffvat__VatReturn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffvat__Box2__c</fullName>
        <formula>ROUND(ffvat__Box2Sum__c * (-1), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__Box3__c</fullName>
        <formula>ffvat__Box1__c   +  ffvat__Box2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__Box6Sum__c</fullName>
        <label>Box6Sum</label>
        <summarizedField>ffvat__VatReportedTransaction__c.ffvat__NetReported__c</summarizedField>
        <summaryFilterItems>
            <field>ffvat__VatReportedTransaction__c.ffvat__NetBox__c</field>
            <operation>equals</operation>
            <value>Box 6, Box 8</value>
        </summaryFilterItems>
        <summaryForeignKey>ffvat__VatReportedTransaction__c.ffvat__VatReturn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffvat__DateFrom__c</fullName>
        <label>Period Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffvat__DateTo__c</fullName>
        <label>Period End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffvat__IncludeOutdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Earlier Unreported Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffvat__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>VatReturns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffvat__TotalVATReportedTransactions__c</fullName>
        <label>Total VAT Reported Transactions</label>
        <summaryForeignKey>ffvat__VatReportedTransaction__c.ffvat__VatReturn__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffvat__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard VAT Accounting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cash VAT Accounting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>VAT Return Report</label>
    <listViews>
        <fullName>ffvat__All</fullName>
        <columns>NAME</columns>
        <columns>ffvat__Status__c</columns>
        <columns>ffvat__OwnerCompany__c</columns>
        <columns>ffvat__IncludeOutdated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ffvat__DateTo__c</columns>
        <columns>ffvat__DateFrom__c</columns>
        <columns>ffvat__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffvat__Status__c</field>
            <operation>notEqual</operation>
            <value>Deleted</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT Return Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>